--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.6.0",
     "prettier": "^2.5.1",
     "vite": "^2.7.2"
   }
