--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "eslint": "^8.6.0",
     "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
     "vite": "^2.7.2"
   }
 }
