--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.5.1",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^24.0.0",
     "vite": "^2.7.2"
   },
   "lint-staged": {
