--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
   "*.js": "eslint --cache --fix",
   "*.css": "stylelint --fix",
-  "*.{js,css,md}": "prettier --write"
+  "*.{js,css,md,json}": "prettier --write"
 }
