--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
 
   "plugins": ["stylelint-selector-bem-pattern"],
   "rules": {
+    "selector-class-pattern": null,
     "plugin/selector-bem-pattern": {
       "componentName": "[A-Z]+",
       "componentSelectors": {
